--- a/vaccination_success_pca.Rmd
+++ b/vaccination_success_pca.Rmd
@@ -55,4 +55,19 @@ write.csv(data.with.VSI, "data/VaccinationSucessIndexData.csv", row.names = FALS
 ```
 
 
+Rerunning with alternate df
+
+``` {r}
+vax.summary.new <- read.csv('data/vaccination_summary.csv')
+vax.summary.new <- na.omit(vax.summary.new)
+nrow(vax.summary.new)
+vax.pca3 <- prcomp(x = vax.summary.new[,-1], scale. = TRUE, center = TRUE)
+vax.pca3$rotation
+summary(vax.pca3)
+
+new.data.with.VSI <- vax.summary.new # copy the data
+new.data.with.VSI$VSI <- -vax.pca3$x[,1] # append the VSI (inverse signed PC1 scores)
+
+write.csv(new.data.with.VSI, "data/VaccinationSucessIndexData-New.csv", row.names = FALSE)
+```
 
